Revert "feat: multi-project KG overloads + RAM chat bubble fix + test adaptation"
This reverts commit 658a5c5004604a3aae8d1b2408d95450f1f0eaae.

AI-Generated: true
AI-Tool: claude-code
AI-Model: mimo-v2.5-pro
AI-Lines: 32
AI-Lines-Deleted: 63
AI-Total-Lines: 378
AI-Total-Lines-Deleted: 764
AI-Files: 6
AI-File-List: chat/ChatMessageList.vue, chat/ProjectPickerDialog.vue, service/LogFollowupService.java, chat/RamChatOrchestrator.java, impact/ModifiedRingResolver.java (+1 more)
AI-Developer: 47583@laptop-c2kj599j